[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "misc scripts used for data modification"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"
shapely = "^2.0.1"
pandas = "^2.0.3"
flock = "^0.1"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
